<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:theme="@style/AppTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="693dp"
        android:layout_weight="1"
        android:focusable="false"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:clickable="true"
            android:contentDescription="@string/croco"
            android:focusable="true"
            android:onClick="CrocoDieL"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/button_croco_reboot" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bahnschrift"
            android:gravity="center"
            android:text="@string/crocodev_inc" />

        <EditText
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:fontFamily="@font/bahnschrift"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLength="30" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:fontFamily="@font/bahnschrift"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLength="30" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/bahnschrift"
            android:onClick="sign_up"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/bahnschrift"
            android:onClick="sign_in"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/guest"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bahnschrift"
            android:onClick="guest_button"
            android:text="@string/guest" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|end"
        android:layout_weight="20"
        android:gravity="bottom|end"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/settings_head"
            android:layout_width="49dp"
            android:layout_height="58dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/doge"
            android:onClick="settings_button"
            android:scaleType="fitEnd"
            android:src="@drawable/button_settings"
            tools:layout_editor_absoluteX="355dp"
            tools:layout_editor_absoluteY="2dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>